==> Storm-6V/mqtt-ratgdo/src/ratgdo.cpp <==
#include "common.h"
#include "ratgdo.h"

void setup(){
	if(OUTPUT_GDO != LED_BUILTIN){
		pinMode(LED_BUILTIN,OUTPUT);
		digitalWrite(LED_BUILTIN,LOW);
	}
	firmwareVersion = VERSION;
	pinMode(INPUT_GDO, INPUT_PULLUP);
	pinMode(OUTPUT_GDO, OUTPUT);
	
	Serial.begin(115200); // must remain at 115200 for improv
	Serial.println("");

	#ifndef DISABLE_WIFI
	bootstrapManager.bootstrapSetup(manageDisconnections, manageHardwareButton, callback);
	
	// Setup mqtt topics to subscribe to
	commandTopic = String(mqttTopicPrefix) + deviceName + "/command/#";

	// match these topic names
	doorCommandTopic = String(mqttTopicPrefix) + deviceName + "/command/door";
	lightCommandTopic = String(mqttTopicPrefix) + deviceName + "/command/light";
	lockCommandTopic = String(mqttTopicPrefix) + deviceName + "/command/lock";
	
	// mqtt topics to publish status updates to
	availabilityStatusTopic = String(mqttTopicPrefix) + deviceName + "/status/availability";
	obstructionStatusTopic = String(mqttTopicPrefix) + deviceName + "/status/obstruction";
	doorStatusTopic = String(mqttTopicPrefix) + deviceName + "/status/door";
	lightStatusTopic = String(mqttTopicPrefix) + deviceName + "/status/light";
	lockStatusTopic = String(mqttTopicPrefix) + deviceName + "/status/lock";
	motionStatusTopic = String(mqttTopicPrefix) + deviceName + "/status/motion";
	
	bootstrapManager.setMQTTWill(availabilityStatusTopic.c_str(),"offline",1,false,true);
	
	Serial.print("doorCommandTopic: ");
	Serial.println(doorCommandTopic);
	Serial.print("lightCommandTopic: ");
	Serial.println(lightCommandTopic);
	Serial.print("lockCommandTopic: ");
	Serial.println(lockCommandTopic);
	#endif
	
	pinMode(TRIGGER_OPEN, INPUT_PULLUP);
	pinMode(TRIGGER_CLOSE, INPUT_PULLUP);
	pinMode(TRIGGER_LIGHT, INPUT_PULLUP);
	pinMode(STATUS_DOOR, OUTPUT);
	pinMode(STATUS_OBST, OUTPUT);
	pinMode(INPUT_OBST, INPUT);

	attachInterrupt(TRIGGER_OPEN,isrDoorOpen,CHANGE);
	attachInterrupt(TRIGGER_CLOSE,isrDoorClose,CHANGE);
	attachInterrupt(TRIGGER_LIGHT,isrLight,CHANGE);
	attachInterrupt(INPUT_OBST,isrObstruction,CHANGE);

	delay(60); // 
	if(controlProtocol == "drycontact"){
		Serial.println("Using dry contact control");
	}else if(controlProtocol == "secplus1"){
		swSerial.begin(1200, SWSERIAL_8E1, INPUT_GDO, OUTPUT_GDO, true);
		Serial.println("Using security+ 1.0");
	}else{
		// default to secplus2
 		controlProtocol = "secplus2";
		swSerial.begin(9600, SWSERIAL_8N1, INPUT_GDO, OUTPUT_GDO, true);
		Serial.println("Using security+ 2.0");
	}

	Serial.println("Setup Complete");
	Serial.println(" _____ _____ _____ _____ ____  _____ ");
	Serial.println("| __  |  _  |_   _|   __|    \\|     |");
	Serial.println("|    -|     | | | |  |  |  |  |  |  |");
	Serial.println("|__|__|__|__| |_| |_____|____/|_____|");
	Serial.println("https://paulwieland.github.io/ratgdo/");
	Serial.print("version ");
	Serial.print(VERSION);
	#ifdef DISABLE_WIFI
	Serial.print(" (WiFi disabled)");
	#endif
	Serial.println("");

	delay(500);
}

void gdoStateLoop(){
	blink(false);
	if(!swSerial.available()) return;
	uint8_t serData = swSerial.read();

	static uint32_t msgStart;
	static bool reading = false;
	static uint16_t byteCount = 0;

	if(!reading){
		// shift serial byte onto msg start
		msgStart <<= 8;
		msgStart |= serData;

		if(controlProtocol == "secplus2"){
			// truncate to 3 bytes
			msgStart &= 0x00FFFFFF;

			// if we are at the start of a message, capture the next 16 bytes
			if(msgStart == 0x550100){
				byteCount = 3;
				rxSP2RollingCode[0] = 0x55;
				rxSP2RollingCode[1] = 0x01;
				rxSP2RollingCode[2] = 0x00;

				reading = true;
				return;
			}
		}

		if(controlProtocol == "secplus1"){
			// truncate to 1 byte;
			msgStart &= 0x000000FF;

			if(msgStart >= 0x30 && msgStart <= 0x3A){
				rxSP1StaticCode[0] = msgStart;
				byteCount = 1;
				reading = true;
				lastRX = millis();
				return;
			}
		}
	}

	if(reading){
		if(controlProtocol == "secplus2"){
			rxSP2RollingCode[byteCount] = serData;
			byteCount++;

			if(byteCount == SECPLUS2_CODE_LEN){
				reading = false;
				msgStart = 0;
				byteCount = 0;

				readRollingCode(rxSP2RollingCode, doorState, lightState, lockState, motionState, obstructionState);
			}
		}

		if(controlProtocol == "secplus1"){
			rxSP1StaticCode[byteCount] = serData;
			byteCount++;

			if(byteCount == 2){
				reading = false;
				msgStart = 0;
				byteCount = 0;

				readStaticCode(rxSP1StaticCode, doorState, lightState, lockState);
			}
		}
	}
}

void IRAM_ATTR isrObstruction(){
	if(digitalRead(INPUT_OBST)){
		lastObstructionHigh = millis();
	}else{
		obstructionSensorDetected = true;
		obstructionLowCount++;
	}
	
}

void obstructionLoop(){
	if(!obstructionSensorDetected) return;
	long currentMillis = millis();
	static unsigned long lastMillis = 0;

	// the obstruction sensor has 3 states: clear (HIGH with LOW pulse every 7ms), obstructed (HIGH), asleep (LOW)
	// the transitions between awake and asleep are tricky because the voltage drops slowly when falling asleep
	// and is high without pulses when waking up

	// If at least 3 low pulses are counted within 50ms, the door is awake, not obstructed and we don't have to check anything else

	// Every 50ms
	if(currentMillis - lastMillis > 50){
		// check to see if we got between 3 and 8 low pulses on the line
		if(obstructionLowCount >= 3 && obstructionLowCount <= 8){
			obstructionState = 1;

		// if there have been no pulses the line is steady high or low			
		}else if(obstructionLowCount == 0){
			// if the line is high and the last high pulse was more than 70ms ago, then there is an obstruction present
			if(digitalRead(INPUT_OBST) && currentMillis - lastObstructionHigh > 70){
				obstructionState = 0;
			}else{
				// asleep
			}
		}

		lastMillis = currentMillis;
		obstructionLowCount = 0;
	}
}

void sendDoorStatus(){
	Serial.print("Door state ");
	Serial.println(doorStates[doorState]);

	if(doorState == 1) digitalWrite(STATUS_DOOR, HIGH); // Open
	if(doorState == 2) digitalWrite(STATUS_DOOR, LOW); // Closed
	
	if(isConfigFileOk){
		bootstrapManager.publish(doorStatusTopic.c_str(), doorStates[doorState].c_str(), true);
	}
}

void sendLightStatus(){
	Serial.print("Light state ");
	Serial.println(lightStates[lightState]);

	if(isConfigFileOk){
		bootstrapManager.publish(lightStatusTopic.c_str(), lightStates[lightState].c_str(), true);
	}
}

void sendLockStatus(){
	Serial.print("Lock state ");
	Serial.println(lockStates[lockState]);

	if(isConfigFileOk){
		bootstrapManager.publish(lockStatusTopic.c_str(), lockStates[lockState].c_str(), true);
	}
}

void sendMotionStatus(){
	Serial.print("Motion state ");
	Serial.println(motionStates[motionState]);

	if(isConfigFileOk){
		bootstrapManager.publish(motionStatusTopic.c_str(), motionStates[motionState].c_str(), false);
	}

	motionState = 0; // reset motion state

	// query to sync light state
	delay(100);
	getRollingCode("reboot2");
	transmit(txSP2RollingCode,SECPLUS2_CODE_LEN);
}

void sendObstructionStatus(){
	Serial.print("Obstruction status ");
	Serial.println(obstructionStates[obstructionState]);

	if(obstructionState == 0) digitalWrite(STATUS_OBST,HIGH); // obstructed
	if(obstructionState == 1) digitalWrite(STATUS_OBST,LOW); // clear

	if(isConfigFileOk){
		bootstrapManager.publish(obstructionStatusTopic.c_str(), obstructionStates[obstructionState].c_str(), true);
	}
}

void transmit(byte* payload, unsigned int length){
	if(controlProtocol == "secplus2"){
		digitalWrite(OUTPUT_GDO, HIGH); // pull the line high for 1305 micros so the door opener responds to the message
		delayMicroseconds(1305);
		digitalWrite(OUTPUT_GDO, LOW); // bring the line low

		delayMicroseconds(1260); // "LOW" pulse duration before the message start

		swSerial.write(payload,length);
	}else if(controlProtocol == "secplus1"){
		if(length == 1){
			swSerial.write(payload,1);
			return;
		}

		uint8_t txDelayLen;
		byte tempPayload[1];

		txDelayLen = (lastRX + 275) - millis();
		delay(txDelayLen);

		for (uint8_t i = 0; i <= length; i++){
			tempPayload[0] = payload[i];
			swSerial.write(tempPayload,1);
			delay(25);
		}
	}
}

void pullLow(){
	digitalWrite(OUTPUT_GDO, HIGH);
	delay(500);
	digitalWrite(OUTPUT_GDO, LOW);
}

void openDoor(){
	if(doorStates[doorState] == "open" || doorStates[doorState] == "opening"){
		Serial.print("The door is already ");
		Serial.println(doorStates[doorState]);
		return;
	}

	toggleDoor();
}

void closeDoor(){
	if(doorStates[doorState] == "closed" || doorStates[doorState] == "closing"){
		Serial.print("The door is already ");
		Serial.println(doorStates[doorState]);
		return;
	}

	toggleDoor();
}

void stopDoor(){
	if(doorStates[doorState] == "opening" || doorStates[doorState] == "closing"){
		toggleDoor();
	}else{
		Serial.print("The door is not moving.");
	}
}

void toggleDoor(){
	if(controlProtocol == "drycontact"){
		pullLow();
	}else if(controlProtocol == "secplus1"){
		getStaticCode("door");
		transmit(txSP1StaticCode,4);
	}else{
		getRollingCode("door1");
		transmit(txSP2RollingCode, SECPLUS2_CODE_LEN);

		delay(40);

		getRollingCode("door2");
		transmit(txSP2RollingCode, SECPLUS2_CODE_LEN);

		writeCounterToFlash("rolling",rollingCodeCounter);
	}
}

void lightOn(){
	if(lightStates[lightState] == "on"){
		Serial.println("already on");
	}else{
		toggleLight();
	}
}

void lightOff(){
	if(lightStates[lightState] == "off"){
		Serial.println("already off");
	}else{
		toggleLight();
	}
}

void toggleLight(){
	if(controlProtocol == "drycontact"){
		Serial.println("Light control not supported with dry contact control.");
	}else if(controlProtocol == "secplus1"){
		getStaticCode("light");
		transmit(txSP1StaticCode,4);
	}else{
		getRollingCode("light");
		transmit(txSP2RollingCode,SECPLUS2_CODE_LEN);
		writeCounterToFlash("rolling",rollingCodeCounter);
	}
}

void lock(){
	if(lockStates[lockState] == "locked"){
		Serial.println("already locked");
	}else{
		toggleLock();
	}
}

void unlock(){
	if(lockStates[lockState] == "unlocked"){
		Serial.println("already unlocked");
	}else{
		toggleLock();
	}
}

void toggleLock(){
	if(controlProtocol == "secplus1"){
		getStaticCode("lock");
		transmit(txSP1StaticCode,4);
	}else{
		getRollingCode("lock");
		transmit(txSP2RollingCode,SECPLUS2_CODE_LEN);
		writeCounterToFlash("rolling",rollingCodeCounter);
	}
}
